unpackaged/main/default/objects/TRG_TriggerConf__mdt/TRG_TriggerConf__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Configuration</label>
    <pluralLabel>Trigger Configurations</pluralLabel>
</CustomObject>