unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
        <fullName>AfterDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AfterDelete Event</description>
        <inlineHelpText>AfterDelete Event</inlineHelpText>
        <label>AfterDelete</label>
        <type>Checkbox</type>
    </CustomField>