unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
        <fullName>AfterInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AfterInsert Event</description>
        <inlineHelpText>AfterInsert Event</inlineHelpText>
        <label>AfterInsert</label>
        <type>Checkbox</type>
    </CustomField>