unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
        <fullName>AfterUndelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AfterUndelete Event</description>
        <inlineHelpText>AfterUndelete Event</inlineHelpText>
        <label>AfterUndelete</label>
        <type>Checkbox</type>
    </CustomField>