unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
        <fullName>AfterUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AfterUpdate Event</description>
        <inlineHelpText>AfterUpdate Event</inlineHelpText>
        <label>AfterUpdate</label>
        <type>Checkbox</type>
    </CustomField>