unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
        <fullName>BeforeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BeforeDelete Event</description>
        <inlineHelpText>BeforeDelete Event</inlineHelpText>
        <label>BeforeDelete</label>
        <type>Checkbox</type>
    </CustomField>