unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
        <fullName>BeforeInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BeforeInsert Event</description>
        <inlineHelpText>BeforeInsert Event</inlineHelpText>
        <label>BeforeInsert</label>
        <type>Checkbox</type>
    </CustomField>