unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
        <fullName>BeforeUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BeforeUpdate Event</description>
        <inlineHelpText>BeforeUpdate Event</inlineHelpText>
        <label>BeforeUpdate</label>
        <type>Checkbox</type>
    </CustomField>