unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/Class__c.field-meta.xml
<CustomField>
        <fullName>Class__c</fullName>
        <description>The class or inner class that implements TriggerHandlerInterface</description>
        <inlineHelpText>The class or inner class that implements TriggerHandlerInterface</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>