unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <description>An optional description of the method to invoke</description>
        <inlineHelpText>An optional description of the method to invoke</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </CustomField>