unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/EnabledOnLeanLoad__c.field-meta.xml
<CustomField>
        <fullName>EnabledOnLeanLoad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wheter the trigger is active or not in case TriggerSettings' "CheckEnabledOnLeanLoad__c" is active</description>
        <label>EnabledOnLeanLoad</label>
        <type>Checkbox</type>
    </CustomField>