unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The record status</description>
        <inlineHelpText>The record status</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>