unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/Object__c.field-meta.xml
<CustomField>
        <fullName>Object__c</fullName>
        <description>Object Trigger for to execute this method</description>
        <inlineHelpText>Object Trigger for to execute this method</inlineHelpText>
        <label>Object</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>