unpackaged/main/default/objects/TRG_TriggerConf__mdt/fields/Scope__c.field-meta.xml
<CustomField>
        <fullName>Scope__c</fullName>
        <description>GL -&gt; Global, DE -&gt; Germany, AP -&gt; Asia/Pacific</description>
        <inlineHelpText>GL -&gt; Global, DE -&gt; Germany, AP -&gt; Asia/Pacific</inlineHelpText>
        <label>Scope</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GL</fullName>
                    <default>true</default>
                    <label>GL</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>