unpackaged/main/default/objects/TRG_TriggerConf__mdt/listViews/Account_All.listView-meta.xml
<ListView>
        <fullName>Account_All</fullName>
        <columns>DeveloperName</columns>
        <columns>OrderOfExecution__c</columns>
        <columns>IsActive__c</columns>
        <columns>Class__c</columns>
        <columns>Description__c</columns>
        <columns>AfterDelete__c</columns>
        <columns>AfterInsert__c</columns>
        <columns>AfterUndelete__c</columns>
        <columns>AfterUpdate__c</columns>
        <columns>BeforeDelete__c</columns>
        <columns>BeforeInsert__c</columns>
        <columns>BeforeUpdate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account All</label>
    </ListView>